@startuml

' <<Interface>> Definitions for Design Patterns
interface Observer {
    +update(notification: String): void
}

interface Subject {
    +attach(observer: Observer): void
    +detach(observer: Observer): void
    +notifyObservers(notification: String): void
}

interface SearchStrategy {
    +search(criteria: String): List<Book>
}

interface IteratorInterface {
    +hasNext(): Boolean
    +next(): Book
}

' Book Class with Factory Method and Subject Implementation
class Book implements Subject {
    - title: String
    - author: String
    - year: int
    - category: String
    - copies: int
    - isLoaned: Boolean
    - observers: List<Observer>

    + getDetails(): String
    + updateCopies(count: int): void
    + static createBook(title: String, author: String, year: int, category: String, copies: int): Book
    + attach(observer: Observer): void
    + detach(observer: Observer): void
    + notifyObservers(notification: String): void
}

' Decorator Pattern for Book
abstract class BookDecorator {
    # book: Book
    + getDetails(): String
}

class ExtendedBookInfo {
    + addAdditionalInfo(info: String): void
}

BookDecorator <|-- ExtendedBookInfo

' User Class implementing Observer and Subject
class User implements Observer, Subject {
    - username: String
    - passwordHash: String
    - permissions: List<String>
    - borrowedBooks: List<Book>
    - observers: List<Observer>

    + register(password: String): void
    + login(password: String): Boolean
    + borrowBook(book: Book): void
    + returnBook(book: Book): void
    + update(notification: String): void
    + attach(observer: Observer): void
    + detach(observer: Observer): void
    + notifyObservers(notification: String): void
}

' Library Class as Singleton, Subject, and Observer
class Library <<singleton>> implements Subject, Observer {
    - books: List<Book>
    - users: List<User>
    - observers: List<Observer>
    - instance: Library

    + getInstance(): Library
    + addBook(book: Book): void
    + removeBook(book: Book): void
    + updateBook(book: Book): void
    + searchBooks(criteria: String, strategy: SearchStrategy): List<Book>
    + lendBook(user: User, book: Book): Boolean
    + returnBook(user: User, book: Book): Boolean
    + load_books_from_csv(csv_file_path: String): void
    + attach(observer: Observer): void
    + detach(observer: Observer): void
    + notifyObservers(notification: String): void
    + update(notification: String): void
}

Library --> "many" Book
Library --> "many" User
Library ..|> Subject
Library ..|> Observer

' Search Strategies
class SearchByTitle {
    + search(criteria: String): List<Book>
}

class SearchByAuthor {
    + search(criteria: String): List<Book>
}

class SearchByCategory {
    + search(criteria: String): List<Book>
}

SearchStrategy <|.. SearchByTitle
SearchStrategy <|.. SearchByAuthor
SearchStrategy <|.. SearchByCategory

' Iterator for Books
class BookCollectionIterator implements IteratorInterface {
    - collection: List<Book>
    - index: int

    + hasNext(): Boolean
    + next(): Book
}

BookCollectionIterator ..|> IteratorInterface

Library --> BookCollectionIterator

' Logger Class
class Logger {
    + log(message: String): void
}

Library --> Logger

' GUI Classes
class LibraryGUI {
    + displayMainMenu(): void
    + handleAddBook(): void
    + handleRemoveBook(): void
    + handleSearchBook(): void
    + handleViewBooks(): void
    + handleLendBook(): void
    + handleReturnBook(): void
    + handleLogin(): void
    + handleRegister(): void
    + handlePopularBooks(): void
    + handleLogout(): void
    + on_book_select(event): void
    + populate_book_list(): void
}

LibraryGUI --> Library
LibraryGUI --> Logger

' Relationships
Library ..> Observer : manages
Book ..> Observer : manages
User ..> Observer : manages

@enduml

